Add join course
