# docs/swagger.yaml
@@ -28,13 +28,28 @@ paths:
       parameters:
       - in: "body"
         name: "course"
-        description: "Name of the course to save"
+        description: "Course to save"
         required: false
         schema:
           $ref: "#/definitions/Course"
       responses:
         201:
           description: "Course was correctly created"
+      x-swagger-router-controller: "course"
+  /courses/{id}/join:
+    put:
+      operationId: "joinCourse"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "Id of the course."
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Join course was successful"
+        500:
+          description: "Internal server error"
       x-swagger-router-controller: "course"
   /courses/{id}:
     get:
@@ -61,7 +76,7 @@ paths:
         type: "string"
       - in: "body"
         name: "course"
-        description: "Name of the course to replace"
+        description: "Course to replace"
         required: false
         schema:
           $ref: "#/definitions/Course"
@@ -176,24 +191,62 @@ definitions:
   Course:
     type: "object"
     properties:
+      id:
+        type: "integer"
+        description: "The id of the course"
       name:
         type: "string"
         description: "The name of the course"
+      description:
+        type: "string"
+        description: "The description of the course"
       author:
         type: "string"
         description: "The author of the course"
       imagePath:
         type: "string"
-        description: "The image path of the course"
+        description: "The background image path of the course"
+      avatarPath:
+        type: "string"
+        description: "The avatar image path of the course"
+      tags:
+        type: "array"
+        description: "The tags related to the course"
+        items:
+            type: string
+      duration:
+        type: "integer"
+        description: "The duration in hours of the course"
+      publishDate:
+        type: "integer"
+        description: "The publish date in timestamp format of the course"
+      price:
+        type: "number"
+        format: "double"
+        description: "The price in R$ of the course"
+      status:
+        type: "integer"
+        description: "The status of the course. Not purchased = 0, Purchased = 1"
+        enum: [0, 1]
+    required:
+      - name
+      - author
+
   Community:
     type: "object"
     properties:
+      id:
+        type: "integer"
+        description: "The id of the community"
       name:
         type: "string"
         description: "The name of the community"
       author:
         type: "string"
         description: "The author of the community"
-      imagePath:
+      avatarPath:
         type: "string"
         description: "The image path of the community"
+    required:
+      - name
+      - author
